# opsfleet-take-home-sql-agent

./: .env.example  .gitignore  README.md  persona.md  pyproject.toml  task.md
data/: golden_trios.json
data_agent/: __init__.py  bq.py  cli.py  config.py  graph.py  llm.py  pii.py  prefs.py  prompts.py  reports.py  sqlguard.py  trios.py
docs/: ARCHITECTURE.md  CONSISTENCY_PROBE.md  E2E_RESULTS.md
evals/: test_consistency.py
tests/: test_cli_commands.py  test_graph_flow.py  test_pii.py  test_sqlguard.py
