[project]
name = "data-agent"
version = "0.1.0"
description = "Data Analysis Chat Assistant — LangGraph agent over BigQuery with PII guards, self-healing SQL, and human-in-the-loop destructive ops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "google-cloud-bigquery>=3.42.2",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langfuse>=4.14.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
    "pysocks>=1.7.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "socksio>=1.0.0",
    "sqlglot>=30.12.0",
]

[project.scripts]
data-agent = "data_agent.cli:main"

[dependency-groups]
dev = ["pytest>=9.1.1"]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "data_agent"
module-root = ""

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
